[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-beacon"
version = "3.0.1"
authors = [{name = "ismite"}]
description = "Initialise a production-ready Discord.py bot in just 4 lines of code. Smart and automated command syncing, preconditions (and its presets), easy-to-use in-Discord dashboard, and more. A Dopamine Studios project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.6.4",
    "aiosqlite",
    "psutil",
    "pillow",
    "geocoder"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"beacon.ext" = ["*.ttf"]
